examples/test/testpolicy16011.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16011
  namespace: namespace241
spec:
  podSelector:
    matchLabels:
      key1: value29
      key34: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value3
      podSelector:
        matchLabels:
          key47: value1
          key34: value42
          key9: value42
